[package]
name = "warp-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handle-errors = { version = "0.1.0", path = "handle-errors" } # 拆分该库，主要是为了演示
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
